[res] fix flex wraps secs

--- a/src/assets/styles/sizes.less
+++ b/src/assets/styles/sizes.less
@@ -4,4 +4,4 @@
 
 @mediaWeb: ~"(min-width: @{web})";
 @mediaTablet: ~"(min-width: @{tablet}) and (max-width: @{web})";
-@mediaMobile: ~"(min-width: @{mobile}) and (max-width:  @{tablet})";
+@mediaMobile: ~"(min-width: @{mobile}) and (max-width:  767px)";
