--- a/src/pages/home/section-doctors/style.module.less
+++ b/src/pages/home/section-doctors/style.module.less
@@ -14,6 +14,7 @@
   .gallery {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 2.5rem;
   }
 }
