--- a/src/pages/home/section-pricing/style.module.less
+++ b/src/pages/home/section-pricing/style.module.less
@@ -15,6 +15,7 @@
 
   .gallery {
     padding-top: 3.75rem;
+    flex-wrap: wrap;
     display: flex;
     gap: 3.75rem;
     justify-content: center;
